# YZGI

./: .gitmodules  CMakeLists.txt  README.md
Core/: Bounds3.hpp  Integrator.hpp  Intersection.hpp  Material.cpp  Material.hpp  Ray.hpp  Renderer.cpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  Scene.cpp  Scene.hpp  Texture.cpp  Texture.hpp  Triangle.hpp  global.hpp  main.cpp
DS/: BVH.cpp  BVH.hpp  KDTree.cpp
Integrators/: PathTracing.cpp  PathTracing.hpp  PhotonMapping.cpp  PhotonMapping.hpp
src/: BVH.cpp  BVH.h  BVH.hpp  Bounds3.hpp  Intersection.hpp  Material.cpp  Material.h  Object.hpp  Ray.hpp  Renderer.cpp  Renderer.h  Sampler.cpp  Sampler.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Triangle.hpp  global.hpp  main.cpp
